inclusão de excessões de erro

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,20 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def RREO(an_exercicio, nr_periodo, co_tipo_demonstrativo, no_anexo, id_ente):\n",
     "    url = f'https://apidatalake.tesouro.gov.br/ords/siconfi/tt//rreo?an_exercicio={an_exercicio}&nr_periodo={nr_periodo}&co_tipo_demonstrativo={co_tipo_demonstrativo}&no_anexo={no_anexo}&co_esfera=&id_ente={id_ente}'\n",
     "    response = requests.get(url)\n",
+    "    if(response.status_code != 200): \n",
+    "            return({result:'Falhou'})\n",
     "    dados = response.json()\n",
     "    return dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +154,7 @@
        "2  Obrigações decorrentes de Ativos Constituídos ...  1.040040e+09  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68734,13 +68736,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def RGF(an_exercicio,in_periodicidade, nr_periodo, co_tipo_demonstrativo, co_poder, id_ente):\n",
     "    url = f\"https://apidatalake.tesouro.gov.br/ords/siconfi/tt//rgf?an_exercicio={an_exercicio}&in_periodicidade={in_periodicidade}&nr_periodo={nr_periodo}&co_tipo_demonstrativo={co_tipo_demonstrativo}&no_anexo=&co_esfera=&co_poder={co_poder}&id_ente={id_ente}\"\n",
     "    response = requests.get(url)\n",
+    "    if(response.status_code != 200): \n",
+    "        return({result:'Falhou'})\n",
     "    dados = response.json()\n",
     "    return dados\n",
     "\n",
